--- a/stopwatch.html
+++ b/stopwatch.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="stopwatch.css">
     </head>
 <body>
-    <h1>Stopwatch</h1>
+    <h1 class="center">Stopwatch</h1>
     <hr>
-    <h2 id="digits">00:00:00</h2>
-    <button onclick="start">Start.</button>
-    <button onclick="stop">Stop.</button>
-    <button onclick="reset">Reset.</button>
+    <h2 id="digits" class="center">00:00:00</h2>
+    <button onclick="start()">Start.</button>
+    <button onclick="stop()">Stop.</button>
+    <button onclick="reset()">Reset.</button>
+    <script src="stopwatch.js"></script>
 </body>
 </html>
