everything is done and right

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -15,10 +15,13 @@
     <button onclick="start()" id="start-btn">Start.</button> 
     <button onclick="stop()">Stop.</button>
     <button onclick="reset()">Reset.</button>
-    <button onclick="addlap()">Add Lap.</button>
+    <button onclick="makelap()" id="makelap">Add Lap.</button>
 </div>
+<hr>
 <p class="center">
+
     <ol id="laps">
+
     </ol>
 </p>
     <script src="stopwatch.js"></script>
